Complete front-end part of profiel page

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 
 {% block body %}
     <main class='container-fluid py-5'>
-        <div class="container" id="container-indexPage">
+        <div class="container">
             <div class="hstack gap-3">
                 <div><h1 style="font-size: 45px;">Passwords</h1></div>
                 <div class="ms-auto">
@@ -19,7 +19,7 @@
             </div>
             <hr>
             <span id="index-phrase" class="form-text">Passwords will be saved in chronological order, from the most recent to the oldest</span>
-            <table class="table table-hover" id="table-passwords">
+            <table class="table table-hover table-bordered border" id="table-passwords">
                 <thead>
                     <tr>
                         <th scope="col">Name</th>
