--- a/templates/secret.html
+++ b/templates/secret.html
@@ -9,7 +9,7 @@
 
 {% block body %}
 <main class='container-fluid py-5'>
-    <div class="container" id="container-indexPage">
+    <div class="container">
         <form method="POST" id="updateForm">
         <div class="hstack gap-3">
             <div><h1 style="font-size: 45px;">View Item</h1></div>
@@ -89,12 +89,12 @@
             <div class="row">
                 <div class="col-10">
                     <div class="form-floating">
-                        <input type="text" class="form-control" id="password" name="password" placeholder="Enter an password" value="{{ secret['password'] }}" disabled>
-                        <label for="password" class="text-secondary">{{ secret['password'] }}</label>
+                        <input type="text" class="form-control" id="password" name="password" placeholder="Enter an password" value="{{ decryptedPassword }}" disabled>
+                        <label for="password" class="text-secondary">{{ decryptedPassword }}</label>
                     </div>
                 </div>
                 <div class="col-2">
-                    <button class="btn btn-primary btn-lg" type="button" value="{{ secret['password'] }}" onclick="copyToClipboard(this.value);">
+                    <button class="btn btn-primary btn-lg" type="button" value="{{ decryptedPassword }}" onclick="copyToClipboard(this.value);">
                         <span class="material-icons" style="line-height: unset;">
                             content_copy
                         </span>
