--- a/static/style.css
+++ b/static/style.css
@@ -98,3 +98,22 @@
         margin-bottom: 25px;
     }
 }
+
+/* ------------ 
+   Profile Stuff 
+   ------------ */
+#table-user {
+    text-align: center;
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+
+#deleteUser {
+    margin-top: 30px;
+    height: 40px;
+    font-size: 15px;
+    width: -moz-available;          /* For Mozzila */
+    width: -webkit-fill-available;  /* For Chrome */
+    width: stretch;                 /* Unprefixed */
+    text-align: center;
+}
