--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,13 +1,54 @@
 {% extends 'layout.html' %}
 
 {% block title %}
-    Profile:
+    {% for username in informationCurrentUser %}
+        Profile: {{ username["username"] }} 
+    {% endfor %}
 {% endblock %}
 
 {% block body %}
     <main class='container-fluid py-5'>
-        <div class="container" id="container-indexPage">
-            <h1>Hello World</h1>
+        <div class="container">
+            <div class="hstack gap-3">
+                {% block subTitle %}
+                    {% for username in informationCurrentUser %}
+                        <div><h1 style="font-size: 45px;">Welcome to your profile: {{ username["username"] }} <span>👋</span></h1></div>
+                    {% endfor %}
+                {% endblock %}
+                {% block changeButton %}
+                    <div class="ms-auto">
+                        <a href="/update-profile" type="button" class="btn btn-warning btn-lg">
+                            <span class="material-icons" style="line-height: unset;">
+                                    edit
+                            </span>
+                        </a>
+                    </div>
+                {% endblock %}
+            </div>
+            <hr>
+
+            {% block updateUser %}
+
+            <table class="table table-hover table-bordered border" id="table-user">
+                <thead>
+                    <tr>
+                        <th scope="col">Username</th>
+                        <th scope="col">Password</th>
+                    </tr>
+                </thead>
+                <tbody class="table-group-divider">
+                    {% for data in informationCurrentUser %}
+                        <tr>
+                            <td>{{ data["username"] }}</td>
+                            <td>{{ decryptedPassword }}</td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+            <hr>
+            <button type="button" class="btn btn-danger" id="deleteUser">Delete User</button>
+
+            {% endblock %}
         </div>
     </main>
 {% endblock %}
