--- a/templates/secret.html
+++ b/templates/secret.html
@@ -13,15 +13,22 @@
         <form method="POST" id="updateForm">
         <div class="hstack gap-3">
             <div><h1 style="font-size: 45px;">View Item</h1></div>
-            <div class="ms-auto">
-                {% for id in secrets %}
-                <a class="btn btn-warning btn-lg" href="{{ url_for('views.update', id=id['id']) }}">
-                    <span class="material-icons" style="line-height: unset;">
-                        edit
-                    </span>
-                </a>
-                {% endfor %}
-            </div>
+            {% for secret in secrets %}
+                <div class="ms-auto">
+                    <button type="button" class="btn btn-danger btn-lg" value="{{ secret['id'] }}" onclick="deleteItem(this.value);">
+                        <span class="material-icons" style="line-height: unset;">
+                            delete_forever
+                        </span>
+                    </button>
+                </div>
+                <div>
+                    <a class="btn btn-warning btn-lg" href="{{ url_for('views.update', id=secret['id']) }}">
+                        <span class="material-icons" style="line-height: unset;">
+                            edit
+                        </span>
+                    </a>
+                </div>
+            {% endfor %}
         </div>
         <hr>
 
