--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock %}</title>
 
-    <!-- Add local file CSS, Icon -->
+    <!-- Add local file CSS and Icon -->
     <link rel="icon" href="/static/images/logoipsum-245.png"/>
     <link rel="stylesheet" href="/static/style.css">
 
@@ -92,7 +92,7 @@
         </div>
     </div>
 
-    <!-- Add JS file -->
+    <!-- Add JS files -->
     <script src="/static/index.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
 
