--- a/templates/update-profile.html
+++ b/templates/update-profile.html
@@ -1,51 +1,61 @@
-{% extends 'profile.html' %}
+{% extends 'layout.html' %}
 
-{% block subTitle %}
-    <div><h1 style="font-size: 45px;">Update User</h1></div>
+{% block title %}
+    {% for username in informationCurrentUser %}
+        Update User: {{ username["username"] }} 
+    {% endfor %}
 {% endblock %}
 
-<form action="{{ url-for('views.updateUser') }}" method="POST">
-    {% block changeButton %}
-        <div class="ms-auto">
-            <a href="{{ url_for('views.profile') }}" class="btn btn-danger btn-lg">
-                <span class="material-icons" style="line-height: unset;">
-                    clear
-                </span>
-            </a>
-        </div>
-        <div>
-            <button type="submit" type="button" class="btn btn-success btn-lg">
-                <span class="material-icons" style="line-height: unset;">
-                    done
-                </span>
-            </button>
-        </div>
-    {% endblock %}
+{% block body %}
+    <main class='container-fluid py-5'>
+        <div class="container">
+            <form method="POST">
+                <div class="hstack gap-3">
+                    {% for username in informationCurrentUser %}
+                        <div><h1 style="font-size: 45px;">Update User</h1></div>
+                    {% endfor %}
+                    <div class="ms-auto">
+                        <a href="{{ url_for('views.profile') }}" class="btn btn-danger btn-lg">
+                            <span class="material-icons" style="line-height: unset;">
+                                clear
+                            </span>
+                        </a>
+                    </div>
+                    <div>
+                        <button type="submit" class="btn btn-success btn-lg">
+                            <span class="material-icons" style="line-height: unset;">
+                                done
+                            </span>
+                        </button>
+                    </div>
+                </div>
+                <hr>
 
-    {% block updateUser %}
-        {% for data in informationCurrentUser %}
-            <div class="mb-3" id="inputs">
-                <label class="form-label">Username</label>
-                <div class="form-floating">
-                    <input type="text" class="form-control" id="name" name="name" placeholder="Enter an name" value="{{ data['username'] }}">
-                    <label for="site" class="text-secondary">{{ data["username"] }}</label>
-                </div>
-            </div>
-            <div class="mb-3" id="inputs">
-                <label class="form-label">Password</label>
-                <div class="form-floating">
-                    <input type="text" class="form-control" id="username-profile" name="username" placeholder="Enter an username" value="{{ decryptedPassword }}">
-                    <label for="username" class="text-secondary">{{ decryptedPassword }}</label>
-                </div>
-            </div>
-            <div class="mb-3" id="inputs">
-                <label class="form-label">Confirm Password</label>
-                <div class="form-floating">
-                    <input type="text" class="form-control" id="username" name="username" placeholder="Enter an username" value="{{ decryptedPassword }}" required>
-                    <label for="username" class="text-secondary">{{ decryptedPassword }}</label>
-                </div>
-            </div>
-        {% endfor %}
-        </form>
-    {% endblock %}
-</form>
+                {% for data in informationCurrentUser %}
+                    <div class="mb-3" id="inputs">
+                        <label class="form-label">Username</label>
+                        <div class="form-floating">
+                            <input type="text" class="form-control" id="username-profile" name="username" placeholder="Enter an username" value="{{ data['username'] }}">
+                            <label for="username" class="text-secondary">{{ data["username"] }}</label>
+                        </div>
+                    </div>
+                    <div class="mb-3" id="inputs">
+                        <label class="form-label">Password</label>
+                        <div class="form-floating">
+                            <input type="text" class="form-control" id="password" name="password" placeholder="Enter an password" value="{{ decryptedPassword }}">
+                            <label for="password" class="text-secondary">{{ decryptedPassword }}</label>
+                        </div>
+                        <span class="form-text">Must be greater than 8 characters long.</span>
+                    </div>
+                    <div class="mb-3" id="inputs">
+                        <label class="form-label">Confirm Password</label>
+                        <div class="form-floating">
+                            <input type="text" class="form-control" id="confirm" name="confirm" placeholder="Confirm the password" value="{{ decryptedPassword }}" required>
+                            <label for="confirm" class="text-secondary">{{ decryptedPassword }}</label>
+                        </div>
+                    </div>
+                {% endfor %}
+            </form>
+        </div>
+    </main>
+{% endblock %}
