Adjusted little thing

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -37,7 +37,7 @@
                     <div class="hstack gap-3">
                         <div class="bg-light ms-auto">
                             <form class="d-flex" role="search" action="{{ url_for('views.search') }}" method="POST">
-                                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" id="search" name="search">
+                                <input class="form-control me-2" type="search" placeholder="Search: Name or Email" aria-label="Search" id="search" name="search">
                                 <button class="btn btn-success" type="submit">Search</button>
                             </form>
                         </div>
