--- a/templates/update.html
+++ b/templates/update.html
@@ -38,7 +38,7 @@
         <div class="mb-3" id="inputs">
             <label class="form-label">Username</label>
             <div class="form-floating">
-                <input type="text" class="form-control" id="username" name="username" placeholder="Enter an username" value="{{ secret['username'] }}">
+                <input type="text" class="form-control" id="username-update" name="username" placeholder="Enter an username" value="{{ secret['username'] }}">
                 <label for="username" class="text-secondary">{{ secret['username'] }}</label>
             </div>
         </div>
