--- a/templates/searched.html
+++ b/templates/searched.html
@@ -1,17 +1,13 @@
 {% extends 'layout.html' %}
 
-{% block title %}
-    {% for item in itemSearched %}
-        Item Searched: {{ item["name"] }}
-    {% endfor %} 
+{% block title %}}
+    Item Searched: {{ nameSite }}
 {% endblock %}
 
 {% block body %}
     <main class='container-fluid py-5'>
         <div class="container">
-            {% for item in itemSearched %}
-                <h1 style="font-size: 45px;">You searched for: {{ item["name"] }}</h1>
-            {% endfor %}
+            <h1 style="font-size: 45px;">You searched for: {{ nameSite }}</h1>
             <hr>
             <table class="table table-hover table-bordered border" id="table-passwords">
                 <thead>
