--- a/templates/update-account.html
+++ b/templates/update-account.html
@@ -15,7 +15,7 @@
                         <div><h1 style="font-size: 45px;">Update User</h1></div>
                     {% endfor %}
                     <div class="ms-auto">
-                        <a href="{{ url_for('views.profile') }}" class="btn btn-danger btn-lg">
+                        <a href="{{ url_for('views.account') }}" class="btn btn-danger btn-lg">
                             <span class="material-icons" style="line-height: unset;">
                                 clear
                             </span>
