--- a/templates/layout.html
+++ b/templates/layout.html
@@ -31,7 +31,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="{{ url_for('views.profile') }}">Profile</a>
+                            <a class="nav-link active" aria-current="page" href="{{ url_for('views.account') }}">Account</a>
                         </li>
                     </ul>
                     <div class="hstack gap-3">
