--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
                 <div><h1 style="font-size: 45px;">Passwords</h1></div>
                 <div class="ms-auto">
                     <button type="button" class="btn btn-primary btn-lg" data-bs-toggle="modal" data-bs-target="#addItemModal">
-                        <span class="material-icons" style="line-height: unset;">
+                        <span class="material-icons" style="line-height: unset;" id="icon_password">
                             add
                         </span>
                     </button>
