--- a/static/style.css
+++ b/static/style.css
@@ -24,9 +24,10 @@
     text-align: center;
 }
 
-#confirm {
-    margin-top: -5px;
+#registration-username {
+    margin-bottom: 40px;
 }
+
 
 #status {
     max-width: min-content;
@@ -105,4 +106,10 @@
     text-align: center;
     margin-top: 40px;
     margin-bottom: 40px;
+}
+
+#account-password {
+    width: min-content;
+    margin-right: auto !important;
+    margin-left: auto !important;
 }
