--- a/templates/account.html
+++ b/templates/account.html
@@ -35,7 +35,7 @@
                     <tbody class="table-group-divider">
                             <tr>
                                 <td>{{ data["username"] }}</td>
-                                <td><input type="password" class="form-control" value="{{ decryptedPassword }}" id="account-password"></td>
+                                <td><input type="password" class="form-control" value="{{ decryptedPassword }}" id="account-password" disabled></td>
                                 <td><button type="button" class="btn btn-secondary btn-lg" onclick="seePasswordAccount();">
                                         <span class="material-icons" style="line-height: unset;" id="span_text">
                                             visibility
