--- a/templates/account.html
+++ b/templates/account.html
@@ -22,7 +22,7 @@
                 </div>
             </div>
             <hr>
-            
+            <p style="color: blue;" class="mb-3 fw-semibold lh-1">Information Account</p>
             {% for data in informationCurrentUser %}
                 <table class="table table-hover table-bordered border" id="table-user">
                     <thead>
@@ -45,13 +45,26 @@
                             </tr>
                     </tbody>
                 </table>
-                <hr>
-
-                <div class="card" style="margin-top: 40px;">
+                <hr>      
+                <p style="color: blue;" class="mb-3 fw-semibold lh-1">Action</p>
+                <div class="card" style="margin-top: 40px; margin-bottom: 40px;">
                     <div class="card-body">
                         <h5 class="card-title">Delete Account</h5>
                         <p class="card-text">By deleting the account you will lose any saved password and it will not be possible to recover it.</p>
                         <button type="button" class="btn btn-danger" id="deleteUser" value="{{ data['id'] }}" onclick="deleteAccount(this.value);">Delete Account</button>
+                    </div>
+                </div>
+                <hr>      
+                <p style="color: blue;" class="mb-3 fw-semibold lh-1">Settings</p>
+                
+                <div class="hstack gap-3" style="margin-top: 30px;">
+                    <div><label>Choose theme</label></div>
+
+                    <div>
+                        <select class="form-select" id="inlineFormSelectPref" id="selectionThemes" disabled>
+                            <option selected>Light</option>
+                            <option value="1">Dark</option>
+                        </select>
                     </div>
                 </div>
             {% endfor %}
