Changed Font, cleaned code

--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,11 @@
-/* --------- 
-   ALl stuff 
-   --------- */
+body {
+  font-family: 'Montserrat', sans-serif !important;
+}
+
+#sections {
+  color: blue;
+}
+
 .unselectable {
   -webkit-user-select: none;
   -webkit-touch-callout: none;
