--- a/templates/secret.html
+++ b/templates/secret.html
@@ -29,11 +29,11 @@
                     </a>
                 </div>
             {% endfor %}
-        </div>
+        </div
+        >
         <hr>
 
         {% for secret in secrets %}
-
         <div class="mb-3" id="inputs">
             <label class="form-label">Name</label>
             <div class="row">
