--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" data-bs-theme="light">
+
+<html lang="en" data-theme="Black">
 <head>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,17 +11,23 @@
     <!-- Add local file CSS and Icon -->
     <link rel="icon" href="/static/images/logoipsum-245.png"/>
     <link rel="stylesheet" href="/static/style.css">
-
+    
     <!-- Bootstrap Links -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 
     <!-- Google icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">    
+
+    <!-- Add JS files -->
+    <script defer src="/static/index.js"></script>
+    <script defer src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
 
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-light">
+    <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <a class="navbar-brand" href="{{ url_for('views.index') }}">
                 <img src="/static/images/logoipsum-245.svg" alt="Axiom" width="30" height="24">
@@ -35,14 +43,14 @@
                         </li>
                     </ul>
                     <div class="hstack gap-3">
-                        <div class="bg-light ms-auto">
+                        <div class="ms-auto">
                             <form class="d-flex" role="search" action="{{ url_for('views.search') }}" method="POST">
                                 <input class="form-control me-2" type="search" placeholder="Search: Name or Email" aria-label="Search" id="search" name="search">
                                 <button class="btn btn-success" type="submit">Search</button>
                             </form>
                         </div>
                         <div class="vr"></div>
-                        <div class="bg-light">
+                        <div>
                             <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#logoutModal">Logout</button>
                         </div>
                     </div>
@@ -69,8 +77,10 @@
         {% endif %}
     {% endwith %}
     
+    
     {% block body %}
     {% endblock %}
+
 
     <!-- Modal Logout -->
     <div class="modal fade" id="logoutModal" tabindex="-1" aria-labelledby="logoutModalLabel" aria-hidden="true">
@@ -91,10 +101,5 @@
         </div>
         </div>
     </div>
-
-    <!-- Add JS files -->
-    <script src="/static/index.js"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-
 </body>
 </html>
