--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -29,7 +29,7 @@
             
             <br/>
 
-            <button type="submit" class="btn btn-primary" id="submit">Login</button>
+            <button type="submit" class="btn btn-primary" id="submit" onclick="fprt();">Login</button>
             <button type="button" class="btn btn-outline-danger" id="modalRegister" data-bs-toggle="modal" data-bs-target="#BackdropRegister">Registration</button>
         </form> 
     </div>
